--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sakura-arcade",
   "version": "1.0.0",
   "main": "server.js",
+  "engines": { "node": "20.x" },
   "scripts": {
     "start": "node server.js"
   },
